// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Image /> with additional className matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      TEST_CLASSNAME
      {
        display: inline-block;
      }
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with block matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: block;
      }
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with border type matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        border-radius: 50%;
        display: inline-block;
      }
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with default options matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: inline-block;
      }
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with fullWidth and height matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: block;
      }
  height={50}
  shouldFadeIn={false}
  src="image.png"
  width="100%"
/>
`;

exports[`<Image /> with fullWidth matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: block;
      }
  shouldFadeIn={false}
  src="image.png"
  width="100%"
/>
`;

exports[`<Image /> with height 50 and width 100 matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: inline-block;
      }
  height={50}
  shouldFadeIn={false}
  src="image.png"
  width={100}
/>
`;

exports[`<Image /> with imageFit cover matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: inline-block;
      }
  imageFit={2}
  shouldFadeIn={false}
  src="image.png"
/>
`;

exports[`<Image /> with shouldFadeIn matches its snapshot 1`] = `
<StyledCustomizedImage
  alt="description"
  className=
      y-image
      {
        display: inline-block;
      }
  shouldFadeIn={true}
  src="image.png"
/>
`;
